--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
-[build-system]
+c[build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "wavelink"
+name = "nextcordwavelink"
 version = "3.5.0"
 
 authors = [
-  { name="PythonistaGuild, EvieePy", email="evieepy@gmail.com" },
+  { name="High", email="jacklshanks@gmail.com" },
 ]
 dynamic = ["dependencies"]
-description = "A robust and powerful, fully asynchronous Lavalink wrapper built for discord.py in Python."
+description = "A robust and powerful, fully asynchronous Lavalink wrapper built for Nextcord in Python."
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
